--- a/.im.will.yml
+++ b/.im.will.yml
@@ -5,6 +5,18 @@ submodule :
   wTools :
     path : npm:///wTools
     enabled : 0 # submodule
+  wCopyable :
+    path : npm:///wCopyable
+    enabled : 0 # submodule
+  wFiles :
+    path : npm:///wFiles
+    enabled : 0 # submodule
+  wConsequence :
+    path : npm:///wConsequence
+    enabled : 0 # submodule
+  pngjs :
+    path : npm:///pngjs
+    enabled : 0 # submodule
 
 path :
 
@@ -41,7 +53,7 @@ path :
       content : prime
 
   entry.proto.no.tests :
-    path : proto/dwtools/___
+    path : proto/dwtools/amid/l3/image/entry/Reader.s
     criterion :
       tests : 'no.tests'
   entry.proto.only.tests :
@@ -50,7 +62,7 @@ path :
       tests : 'only.tests'
 
   entry.out.raw.debug :
-    path : '{path::out.*=1}/source/dwtools/___'
+    path : '{path::out.*=1}/source/dwtools/amid/l3/image/entry/Reader.s'
     criterion :
       debug : [ debug, release ]
       raw : raw
@@ -219,4 +231,3 @@ build :
       - build::raw.release
       - build::release
       - build::npm
-
