--- a/.im.will.yml
+++ b/.im.will.yml
@@ -14,7 +14,7 @@ submodule :
     path : npm:///wConsequence
     enabled : 0 # submodule
   pngjs :
-    path : npm:///pngjs
+    path : npm:///pngjs#5.0.0
     enabled : 0 # submodule
   eslint :
     path : npm:///eslint#7.1.0
@@ -22,11 +22,20 @@ submodule :
     criterion :
       debug : 1
 
+  AssetsImagesPng :
+    path : git:///git@github.com:Wandalen/AssetsImagesPng.git
+    criterion :
+      asset : 1
+      proto : 0
+
 path :
 
   in : '.'
   out : 'out'
-  temp : 'path::out'
+  tmp : 'tmp'
+  temp :
+    - 'path::out'
+    - 'path::tmp'
   proto : './proto'
   export : '{path::proto}/**'
   doc : './doc'
@@ -57,7 +66,7 @@ path :
       content : prime
 
   entry.proto.no.tests :
-    path : proto/dwtools/amid/l3/image/entry/Reader.s
+    path : proto/dwtools/amid/l3/image/entry/Image.s
     criterion :
       tests : 'no.tests'
   entry.proto.only.tests :
@@ -66,7 +75,7 @@ path :
       tests : 'only.tests'
 
   entry.out.raw.debug :
-    path : '{path::out.*=1}/source/dwtools/amid/l3/image/entry/Reader.s'
+    path : '{path::out.*=1}/source/dwtools/amid/l3/image/entry/Image.s'
     criterion :
       debug : [ debug, release ]
       raw : raw
@@ -80,6 +89,10 @@ path :
 
 reflector :
 
+  reflect.assets :
+    src : 'submodule::AssetsImagesPng / exported::*=1 / reflector::exported.export'
+    dst : '{path::tmp}'
+
   reflect.proto :
     inherit : predefined.*
     criterion :
@@ -87,6 +100,7 @@ reflector :
       debug : [ debug, release ]
       raw : [ raw, compiled ]
       content : prime
+      # proto : 1
     filePath :
       path::proto : '{path::out.*=1}/source'
 
@@ -188,7 +202,8 @@ build :
       content : prime
     steps :
       - step::clean.out*=2
-      - reflect.proto.*=1
+      # - reflect.proto.*=1
+      - reflect.assets
 
   compiled.debug :
     criterion :
