--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "dependencies" :
   {
+    "pngjs" : "=5.0.0",
+    "png.js": "=0.2.1",
     "wTools" : "alpha",
     "wCopyable" : "alpha",
     "wFiles" : "alpha",
-    "wConsequence" : "alpha",
-    "pngjs" : "=5.0.0",
-    "png.js": "=0.2.1"
+    "wConsequence" : "alpha"
   },
-  "devDependencies" : { "wTesting" : "alpha", "eslint" : "7.1.0", "wimage" : "file:." },
+  "devDependencies" : { "eslint" : "7.1.0", "wimage" : "file:.", "wTesting" : "alpha" },
   "keywords" : [ "wTools" ]
 }
