--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "pngjs": "=5.0.0",
     "png.js": "=0.2.1",
+    "node-libpng": "0.2.14",
     "wTools": "alpha",
     "wCopyable": "alpha",
     "wFiles": "alpha",
