--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   {
     "pngjs" : "=5.0.0",
     "png.js" : "=0.2.1",
+    "node-libpng" : "=0.2.16",
     "wTools" : "alpha",
     "wCopyable" : "alpha",
     "wFiles" : "alpha",
