--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description" : "Standardized abstract interface to open / read / parse image with collection of plugins.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
   "license" : "MIT",
-  "main" : "proto/dwtools/amid/l3/image/entry/Image.s",
-  "files" : [ "proto/dwtools/amid/l3/image", "proto/dwtools/Tools.s" ],
+  "main" : "proto/wtools/amid/l3/image/entry/Image.s",
+  "files" : [ "proto/wtools/amid/l3/image", "proto/wtools/Tools.s" ],
   "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen .build proto" },
   "repository" : { "type" : "git", "url" : "https://github.com/Wandalen/wImage.git" },
   "bugs" :
