--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "pngjs": "=5.0.0",
     "png.js": "=0.2.1",
+    "png-js": "=1.0.0",
     "node-libpng": "=0.2.16",
     "wTools": "alpha",
     "wCopyable": "alpha",
