--- a/package.json
+++ b/package.json
@@ -12,23 +12,15 @@
   {
     "url" : "https://github.com/Wandalen/wImage/issues"
   },
-  "dependencies": {
-    "sharp": "=0.25.4",
-    "pngjs": "=5.0.0",
-    "png.js": "=0.2.1",
-    "png-js": "=1.0.0",
-    "node-libpng": "=0.2.16",
-    "wTools": "alpha",
-    "wCopyable": "alpha",
-    "wFiles": "alpha",
-    "wConsequence": "alpha"
+  "dependencies" :
+  {
+    "pngjs" : "=5.0.0",
+    "png.js" : "=0.2.1",
+    "wTools" : "alpha",
+    "wCopyable" : "alpha",
+    "wFiles" : "alpha",
+    "wConsequence" : "alpha"
   },
-  "devDependencies": {
-    "eslint": "7.1.0",
-    "wimage": "file:.",
-    "wTesting": "alpha"
-  },
-  "keywords": [
-    "wTools"
-  ]
+  "devDependencies" : { "eslint" : "7.1.0", "wimage" : "file:.", "wTesting" : "alpha" },
+  "keywords" : [ "wTools" ]
 }
