--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies" :
   {
+    "node-libpng" : "=0.2.17",
+    "sharp" : "=0.25.4",
     "pngjs" : "=5.0.0",
     "png.js" : "=0.2.1",
     "wTools" : "alpha",
