--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "sharp" : "=0.25.4",
     "pngjs" : "=5.0.0",
     "png.js" : "=0.2.1",
+    "png-js" : "=1.0.0",
     "wTools" : "alpha",
     "wCopyable" : "alpha",
     "wFiles" : "alpha",
