--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pngjs" : "=5.0.0",
     "png.js" : "=0.2.1",
     "png-js" : "=1.0.0",
+    "jpeg-js": "=0.4.1",
     "wTools" : "alpha",
     "wCopyable" : "alpha",
     "wFiles" : "alpha",
