--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "png.js" : "=0.2.1",
     "png-js" : "=1.0.0",
     "jpeg-js": "=0.4.1",
-    "bmp-js": "=0.1.0",
+    "bmp-js" : "=0.1.0",
+    "utif" : "=3.1.0",
     "wTools" : "alpha",
     "wCopyable" : "alpha",
     "wFiles" : "alpha",
