--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jpeg-js": "=0.4.1",
     "bmp-js" : "=0.1.0",
     "utif" : "=3.1.0",
+    "omggif": "1.0.10",
     "wTools" : "alpha",
     "wCopyable" : "alpha",
     "wFiles" : "alpha",
