--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pngjs" : "=5.0.0",
     "png.js" : "=0.2.1",
     "png-js" : "=1.0.0",
+    "fast-png": "=5.0.2",
     "jpeg-js": "=0.4.1",
     "bmp-js" : "=0.1.0",
     "utif" : "=3.1.0",
