--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wimage",
-  "version": "0.3.84",
+  "version": "0.3.85",
   "description": "Standardized abstract interface to open / read / parse image with collection of plugins.",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
   "license": "MIT",
@@ -32,15 +32,15 @@
     "bmp-js": "=0.1.0",
     "utif": "=3.1.0",
     "omggif": "1.0.10",
-    "wTools": "gamma",
-    "wCopyable": "gamma",
-    "wFiles": "gamma",
-    "wConsequence": "gamma",
-    "wgdf": "gamma"
+    "wTools": "delta",
+    "wCopyable": "delta",
+    "wFiles": "delta",
+    "wConsequence": "delta",
+    "wgdf": "delta"
   },
   "devDependencies": {
     "eslint": "7.1.0",
-    "wTesting": "gamma",
+    "wTesting": "delta",
     "wimage": "file:."
   },
   "keywords": [
