--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "wimage",
-  "version": "0.3.88",
+  "version": "0.3.89",
   "description": "Standardized abstract interface to open / read / parse image with collection of plugins.",
   "author": "Kostiantyn Wandalen <wanalen@01.school>",
   "license": "MIT",
   "main": "proto/wtools/amid/l3/image/entry/Image.s",
   "files": [
     "proto/wtools/amid/l3/image",
-    "proto/wtools/Tools.s"
+    "proto/wtools/Tools.s",
+    "proto/node_modules"
   ],
   "scripts": {
     "test": "wtest .run 'proto/**' rapidity:-3",
@@ -40,8 +41,7 @@
   },
   "devDependencies": {
     "eslint": "7.1.0",
-    "wTesting": "delta",
-    "wimage": "file:."
+    "wTesting": "delta"
   },
   "keywords": [
     "wTools"
