--- a/.im.will.yml
+++ b/.im.will.yml
@@ -1,305 +1,299 @@
-
-submodule :
-
-  wTools :
-    path : npm:///wTools
-    enabled : 0 # submodule
-  wCopyable :
-    path : npm:///wCopyable
-    enabled : 0 # submodule
-  wFiles :
-    path : npm:///wFiles
-    enabled : 0 # submodule
-  wConsequence :
-    path : npm:///wConsequence
-    enabled : 0 # submodule
-  wGdf :
-    path : npm:///wgdf
-    enabled : 0 # submodule
-
-  pngjs :
-    path : npm:///pngjs#5.0.0
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  png.js :
-    path : npm:///png.js#0.2.1
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  png-js :
-    path : npm:///png-js#1.0.0
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  fast-png :
-    path : npm:///fast-png#5.0.2
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  sharp :
-    path : npm:///sharp0.25.4,
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  node-libpng :
-    path : npm:///node-libpng#0.2.18
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  jpeg-js :
-    path : npm:///jpeg-js#0.4.1
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  bmp-js :
-    path : npm:///bmp-js#0.1.0
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  utif :
-    path : npm:///utif#3.1.0
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-  omggif :
-    path : npm:///omggif#1.0.10
-    enabled : 0 # submodule
-    criterion :
-      external : 1
-
-  eslint :
-    path : npm:///eslint#7.1.0
-    enabled : 0 # submodule
-    criterion :
-      debug : 1
-      external : 1
-
-  AssetsImagesPng :
-    path : git:///git@github.com:Wandalen/AssetsImagesPng.git
-    criterion :
-      asset : 1
-      proto : 0
-
-path :
-
-  in : '.'
-  out : 'out'
-  tmp : 'tmp'
-  temp :
+submodule:
+  wTools:
+    path: 'npm:///wTools'
+    enabled: 0
+  wCopyable:
+    path: 'npm:///wCopyable'
+    enabled: 0
+  wFiles:
+    path: 'npm:///wFiles'
+    enabled: 0
+  wConsequence:
+    path: 'npm:///wConsequence'
+    enabled: 0
+  wGdf:
+    path: 'npm:///wgdf'
+    enabled: 0
+  pngjs:
+    path: 'npm:///pngjs#5.0.0'
+    enabled: 0
+    criterion:
+      external: 1
+  png.js:
+    path: 'npm:///png.js#0.2.1'
+    enabled: 0
+    criterion:
+      external: 1
+  png-js:
+    path: 'npm:///png-js#1.0.0'
+    enabled: 0
+    criterion:
+      external: 1
+  fast-png:
+    path: 'npm:///fast-png#5.0.2'
+    enabled: 0
+    criterion:
+      external: 1
+  sharp:
+    path: 'npm:///sharp0.25.4,'
+    enabled: 0
+    criterion:
+      external: 1
+  node-libpng:
+    path: 'npm:///node-libpng#0.2.18'
+    enabled: 0
+    criterion:
+      external: 1
+  jpeg-js:
+    path: 'npm:///jpeg-js#0.4.1'
+    enabled: 0
+    criterion:
+      external: 1
+  bmp-js:
+    path: 'npm:///bmp-js#0.1.0'
+    enabled: 0
+    criterion:
+      external: 1
+  utif:
+    path: 'npm:///utif#3.1.0'
+    enabled: 0
+    criterion:
+      external: 1
+  omggif:
+    path: 'npm:///omggif#1.0.10'
+    enabled: 0
+    criterion:
+      external: 1
+  eslint:
+    path: 'npm:///eslint#7.1.0'
+    enabled: 0
+    criterion:
+      debug: 1
+      external: 1
+  AssetsImagesPng:
+    path: 'git:///git@github.com:Wandalen/AssetsImagesPng.git'
+    criterion:
+      asset: 1
+      proto: 0
+path:
+  in: .
+  out: out
+  tmp: tmp
+  temp:
     - 'path::out'
     - 'path::tmp'
-  proto : './proto'
-  export : '{path::proto}/**'
-  doc : './doc'
-
-  out.raw.debug :
-    path : '{path::out}/debug'
-    criterion :
-      debug : debug
-      raw : raw
-      content : prime
-  out.compiled.debug :
-    path : '{path::out}/compiled.debug'
-    criterion :
-      debug : debug
-      raw : compiled
-      content : prime
-  out.raw.release :
-    path : '{path::out}/raw.release'
-    criterion :
-      debug : release
-      raw : raw
-      content : prime
-  out.compiled.release :
-    path : '{path::out}/release'
-    criterion :
-      debug : release
-      raw : compiled
-      content : prime
-
-  entry.proto.no.tests :
-    path : proto/wtools/amid/l3/image/entry/Image.s
-    criterion :
-      tests : 'no.tests'
-  entry.proto.only.tests :
-    path : proto/**/*.test.*
-    criterion :
-      tests : 'only.tests'
-
-  entry.out.raw.debug :
-    path : '{path::out.*=1}/source/wtools/amid/l3/image/entry/Image.s'
-    criterion :
-      debug : [ debug, release ]
-      raw : raw
-      content : prime
-  entry.out.compiled.debug :
-    path : '{path::out.*=}/source/Index.s'
-    criterion :
-      debug : [ debug, release ]
-      raw : compiled
-      content : prime
-
-reflector :
-
-  reflect.assets :
-    src : 'submodule::AssetsImagesPng / exported::*=1 / reflector::exported.export'
-    dst : '{path::tmp}'
-
-  reflect.proto :
-    inherit : predefined.*
-    criterion :
-      tests : 'no.tests'
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-      content : prime
-      # proto : 1
-    filePath :
-      path::proto : '{path::out.*=1}/source'
-
-  transpile.proto.raw :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.no.tests
-    criterion :
-      raw : raw
-      debug : release
-      content : prime
-    filePath :
-      path::proto : '{path::out.raw.release}'
-
-  transpile.proto.no.tests.compiled :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.*=1
-    criterion :
-      tests : 'no.tests'
-      raw : compiled
-      debug : [ debug, release ]
-      content : prime
-    filePath :
-      '**.test*' : 0
-      '**.test/**' : 0
-      path::proto : '{path::out.*=1}/Main.s'
-
-  transpile.proto.only.tests.compiled :
-    inherit : predefined.*
-    step :
-      inherit : files.transpile
-      entry : path::entry.proto.*=1
-      external.before : '{path::out.*=1}/Main.s'
-    criterion :
-      tests : 'only.tests'
-      raw : compiled
-      debug : [ debug, release ]
-      content : prime
-    filePath :
-      '**.test*' : 1
-      path::proto : '{path::out.*=1}/Tests.test.s'
-
-step :
-
-  npm.generate :
-    inherit : npm.generate
-    entryPath : path::entry.out.*=1
-    packagePath : '{path::out.*=1}/package.json'
-    filesPath : '{path::out.*=1}/source/**'
-    criterion :
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-
-  clean.out :
-    inherit : files.delete
-    filePath : '{path::out.*=1}/source'
-    criterion :
-      debug : [ debug, release ]
-      raw : [ raw, compiled ]
-      tests : [ 'no.tests', 'only.tests' ]
-      content : [ 'prime', 'npm' ]
-
-  clean.out.npm :
-    inherit : files.delete
-    filePath : path::out.*=1
-    criterion :
-      debug : debug
-      raw : compiled
-      tests : no.tests
-      content : npm
-
-  tst.proto :
-    shell : 'tst {path::proto}'
-    criterion :
-      content : proto
-
-  tst.debug :
-    shell : 'tst {path::out.*=1}'
-    criterion :
-      content : prime
-      debug : debug
-
-  tst.release :
-    shell : 'tst {path::out.*=1}'
-    criterion :
-      content : prime
-      debug : release
-
-build :
-
-  debug :
-    criterion :
-      default : 1
-      debug : debug
-      raw : raw
-      content : prime
-    steps :
-      - step::clean.out*=2
-      # - reflect.proto.*=1
+  proto: ./proto
+  export: '{path::proto}/**'
+  doc: ./doc
+  out.raw.debug:
+    path: '{path::out}/debug'
+    criterion:
+      debug: debug
+      raw: raw
+      content: prime
+  out.compiled.debug:
+    path: '{path::out}/compiled.debug'
+    criterion:
+      debug: debug
+      raw: compiled
+      content: prime
+  out.raw.release:
+    path: '{path::out}/raw.release'
+    criterion:
+      debug: release
+      raw: raw
+      content: prime
+  out.compiled.release:
+    path: '{path::out}/release'
+    criterion:
+      debug: release
+      raw: compiled
+      content: prime
+  entry.proto.no.tests:
+    path: proto/wtools/amid/l3/image/entry/Image.s
+    criterion:
+      tests: no.tests
+  entry.proto.only.tests:
+    path: proto/**/*.test.*
+    criterion:
+      tests: only.tests
+  entry.out.raw.debug:
+    path: '{path::out.*=1}/source/wtools/amid/l3/image/entry/Image.s'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw: raw
+      content: prime
+  entry.out.compiled.debug:
+    path: '{path::out.*=}/source/Index.s'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw: compiled
+      content: prime
+  npm.proto.entry:
+    - /pro/module/wImage/proto/wtools/amid/l3/image/entry/Image.s
+    - /pro/module/wImage/proto/node_modules/wimage
+reflector:
+  reflect.assets:
+    src: 'submodule::AssetsImagesPng / exported::*=1 / reflector::exported.export'
+    dst: '{path::tmp}'
+  reflect.proto:
+    inherit: predefined.*
+    criterion:
+      tests: no.tests
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+      content: prime
+    filePath:
+      'path::proto': '{path::out.*=1}/source'
+  transpile.proto.raw:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.no.tests'
+    criterion:
+      raw: raw
+      debug: release
+      content: prime
+    filePath:
+      'path::proto': '{path::out.raw.release}'
+  transpile.proto.no.tests.compiled:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.*=1'
+    criterion:
+      tests: no.tests
+      raw: compiled
+      debug:
+        - debug
+        - release
+      content: prime
+    filePath:
+      '**.test*': 0
+      '**.test/**': 0
+      'path::proto': '{path::out.*=1}/Main.s'
+  transpile.proto.only.tests.compiled:
+    inherit: predefined.*
+    step:
+      inherit: files.transpile
+      entry: 'path::entry.proto.*=1'
+      external.before: '{path::out.*=1}/Main.s'
+    criterion:
+      tests: only.tests
+      raw: compiled
+      debug:
+        - debug
+        - release
+      content: prime
+    filePath:
+      '**.test*': 1
+      'path::proto': '{path::out.*=1}/Tests.test.s'
+step:
+  npm.generate:
+    inherit: npm.generate
+    entryPath: 'path::entry.out.*=1'
+    packagePath: '{path::out.*=1}/package.json'
+    filesPath: '{path::out.*=1}/source/**'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+  clean.out:
+    inherit: files.delete
+    filePath: '{path::out.*=1}/source'
+    criterion:
+      debug:
+        - debug
+        - release
+      raw:
+        - raw
+        - compiled
+      tests:
+        - no.tests
+        - only.tests
+      content:
+        - prime
+        - npm
+  clean.out.npm:
+    inherit: files.delete
+    filePath: 'path::out.*=1'
+    criterion:
+      debug: debug
+      raw: compiled
+      tests: no.tests
+      content: npm
+  tst.proto:
+    shell: 'tst {path::proto}'
+    criterion:
+      content: proto
+  tst.debug:
+    shell: 'tst {path::out.*=1}'
+    criterion:
+      content: prime
+      debug: debug
+  tst.release:
+    shell: 'tst {path::out.*=1}'
+    criterion:
+      content: prime
+      debug: release
+build:
+  debug:
+    criterion:
+      default: 1
+      debug: debug
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - reflect.assets
-
-  compiled.debug :
-    criterion :
-      debug : debug
-      raw : compiled
-      content : prime
-    steps :
-      - step::clean.out*=2
+  compiled.debug:
+    criterion:
+      debug: debug
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.no.tests*=1
       - transpile.proto.only.tests*=1
-
-  raw.release :
-    criterion :
-      debug : release
-      raw : raw
-      content : prime
-    steps :
-      - step::clean.out*=2
+  raw.release:
+    criterion:
+      debug: release
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.raw
-
-  release :
-    criterion :
-      debug : release
-      raw : compiled
-      content : prime
-    steps :
-      - step::clean.out*=2
+  release:
+    criterion:
+      debug: release
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
       - transpile.proto.no.tests*=1
       - transpile.proto.only.tests*=1
-
-  npm :
-    criterion :
-      debug : debug
-      raw : raw
-      content : npm
-    steps :
+  npm:
+    criterion:
+      debug: debug
+      raw: raw
+      content: npm
+    steps:
       - npm.generate.*=1
-      # - npm.generate
-
-  all :
-    steps :
-      - build::debug
-      - build::compiled.debug
-      - build::raw.release
-      - build::release
-      - build::npm
+  all:
+    steps:
+      - 'build::debug'
+      - 'build::compiled.debug'
+      - 'build::raw.release'
+      - 'build::release'
+      - 'build::npm'
