--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name" : "wimage",
-  "version" : "0.3.96",
+  "version" : "0.3.97",
   "description" : "Standardized abstract interface to open / read / parse image with collection of plugins.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
   "license" : "MIT",
   "main" : "proto/node_modules/wimage",
-  "files" : [ "proto/wtools/amid/l3/image", "proto/wtools/Tools.s", "proto/node_modules" ],
+  "files" : [ "proto/wtools/amid/l3/image", "proto/node_modules" ],
   "scripts" : { "test" : "wtest .run 'proto/**' rapidity:-3", "docgen" : "wdocgen .build proto" },
   "repository" : { "type" : "git", "url" : "https://github.com/Wandalen/wImage.git" },
   "bugs" :
