--- a/will.yml
+++ b/will.yml
@@ -1,81 +1,105 @@
-submodule:
-  wTools:
-    path: 'npm:///wTools'
-    enabled: 0
-  wCopyable:
-    path: 'npm:///wCopyable'
-    enabled: 0
-  wFiles:
-    path: 'npm:///wFiles'
-    enabled: 0
-  wConsequence:
-    path: 'npm:///wConsequence'
-    enabled: 0
-  wGdf:
-    path: 'npm:///wgdf'
-    enabled: 0
-  pngjs:
-    path: 'npm:///pngjs#5.0.0'
-    enabled: 0
+about:
+  name: wImage
+  description: >-
+    Standardized abstract interface to open / read / parse image with collection
+    of plugins.
+  version: 0.4.0
+  enabled: 1
+  license: MIT
+  npm.name: wimage
+  author: Kostiantyn Wandalen <wanalen@01.school>
+  keywords:
+    - tools
+    - wTools
+  contributors:
+    - Kostiantyn Wandalen <wanalen@01.school>
+  interpreters:
+    - njs >= 10.0.0
+    - chrome >= 60.0.0
+    - firefox >= 60.0.0
+  npm.scripts:
+    test: wtest .run proto/**
+    docgen: wdocgen .build proto
+build:
+  proto.export:
     criterion:
-      external: 1
-  png.js:
-    path: 'npm:///png.js#0.2.1'
-    enabled: 0
+      content: proto
+      export: 1
+    steps:
+      - 'step::proto.export'
+  doc.export:
     criterion:
-      external: 1
-  png-js:
-    path: 'npm:///png-js#1.0.0'
-    enabled: 0
+      content: doc
+      export: 1
+    steps:
+      - 'step::doc.export'
+  npm.export:
     criterion:
-      external: 1
-  fast-png:
-    path: 'npm:///fast-png#5.0.2'
-    enabled: 0
+      content: npm
+      export: 1
+    steps:
+      - 'step::npm.publish'
+  export:
     criterion:
-      external: 1
-  sharp:
-    path: 'npm:///sharp0.25.4,'
-    enabled: 0
+      default: 1
+      export: 1
+    steps:
+      - 'build::proto.export'
+  debug:
     criterion:
-      external: 1
-  node-libpng:
-    path: 'npm:///node-libpng#0.2.18'
-    enabled: 0
+      default: 1
+      debug: debug
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
+      - reflect.assets
+  compiled.debug:
     criterion:
-      external: 1
-  jpeg-js:
-    path: 'npm:///jpeg-js#0.4.1'
-    enabled: 0
+      debug: debug
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
+      - transpile.proto.no.tests*=1
+      - transpile.proto.only.tests*=1
+  raw.release:
     criterion:
-      external: 1
-  bmp-js:
-    path: 'npm:///bmp-js#0.1.0'
-    enabled: 0
+      debug: release
+      raw: raw
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
+      - transpile.proto.raw
+  release:
     criterion:
-      external: 1
-  utif:
-    path: 'npm:///utif#3.1.0'
-    enabled: 0
+      debug: release
+      raw: compiled
+      content: prime
+    steps:
+      - 'step::clean.out*=2'
+      - transpile.proto.no.tests*=1
+      - transpile.proto.only.tests*=1
+  npm:
     criterion:
-      external: 1
-  omggif:
-    path: 'npm:///omggif#1.0.10'
-    enabled: 0
-    criterion:
-      external: 1
-  eslint:
-    path: 'npm:///eslint#7.1.0'
-    enabled: 0
-    criterion:
-      debug: 1
-      external: 1
-  AssetsImagesPng:
-    path: 'git:///git@github.com:Wandalen/AssetsImagesPng.git'
-    criterion:
-      asset: 1
-      proto: 0
+      debug: debug
+      raw: raw
+      content: npm
+    steps:
+      - npm.generate.*=1
+  all:
+    steps:
+      - 'build::debug'
+      - 'build::compiled.debug'
+      - 'build::raw.release'
+      - 'build::release'
+      - 'build::npm'
 path:
+  repository: 'git+https:///github.com/Wandalen/wImage.git'
+  origins:
+    - 'git+https:///github.com/Wandalen/wImage.git'
+    - 'npm:///wImage'
+  bugtracker: 'https:///github.com/Wandalen/wImage/issues'
   in: .
   out: out
   tmp: tmp
@@ -197,6 +221,26 @@ reflector:
       '**.test*': 1
       'path::proto': '{path::out.*=1}/Tests.test.s'
 step:
+  proto.export:
+    inherit: module.export
+    export: 'path::export'
+    tar: 0
+    criterion:
+      content: proto
+  doc.export:
+    inherit: module.export
+    export: 'path::doc'
+    tar: 0
+    criterion:
+      content: doc
+  npm.export:
+    inherit: module.export
+    export: out.npm
+    tar: 0
+    criterion:
+      content: npm
+  npm.publish:
+    shell: npm publish
   npm.generate:
     inherit: npm.generate
     entryPath: 'path::entry.out.*=1'
@@ -247,53 +291,81 @@ step:
     criterion:
       content: prime
       debug: release
-build:
-  debug:
+submodule:
+  wTools:
+    path: 'npm:///wTools'
+    enabled: 0
+  wCopyable:
+    path: 'npm:///wCopyable'
+    enabled: 0
+  wFiles:
+    path: 'npm:///wFiles'
+    enabled: 0
+  wConsequence:
+    path: 'npm:///wConsequence'
+    enabled: 0
+  wgdf:
+    path: 'npm:///wgdf'
+    enabled: 0
+  pngjs:
+    path: 'npm:///pngjs#5.0.0'
+    enabled: 0
     criterion:
-      default: 1
-      debug: debug
-      raw: raw
-      content: prime
-    steps:
-      - 'step::clean.out*=2'
-      - reflect.assets
-  compiled.debug:
+      external: 1
+  png.js:
+    path: 'npm:///png.js#0.2.1'
+    enabled: 0
     criterion:
-      debug: debug
-      raw: compiled
-      content: prime
-    steps:
-      - 'step::clean.out*=2'
-      - transpile.proto.no.tests*=1
-      - transpile.proto.only.tests*=1
-  raw.release:
+      external: 1
+  png-js:
+    path: 'npm:///png-js#1.0.0'
+    enabled: 0
     criterion:
-      debug: release
-      raw: raw
-      content: prime
-    steps:
-      - 'step::clean.out*=2'
-      - transpile.proto.raw
-  release:
+      external: 1
+  fast-png:
+    path: 'npm:///fast-png#5.0.2'
+    enabled: 0
     criterion:
-      debug: release
-      raw: compiled
-      content: prime
-    steps:
-      - 'step::clean.out*=2'
-      - transpile.proto.no.tests*=1
-      - transpile.proto.only.tests*=1
-  npm:
+      external: 1
+  'sharp0.25.4,':
+    path: 'npm:///sharp0.25.4,'
+    enabled: 0
     criterion:
-      debug: debug
-      raw: raw
-      content: npm
-    steps:
-      - npm.generate.*=1
-  all:
-    steps:
-      - 'build::debug'
-      - 'build::compiled.debug'
-      - 'build::raw.release'
-      - 'build::release'
-      - 'build::npm'
+      external: 1
+  node-libpng:
+    path: 'npm:///node-libpng#0.2.18'
+    enabled: 0
+    criterion:
+      external: 1
+  jpeg-js:
+    path: 'npm:///jpeg-js#0.4.1'
+    enabled: 0
+    criterion:
+      external: 1
+  bmp-js:
+    path: 'npm:///bmp-js#0.1.0'
+    enabled: 0
+    criterion:
+      external: 1
+  utif:
+    path: 'npm:///utif#3.1.0'
+    enabled: 0
+    criterion:
+      external: 1
+  omggif:
+    path: 'npm:///omggif#1.0.10'
+    enabled: 0
+    criterion:
+      external: 1
+  eslint:
+    path: 'npm:///eslint#7.1.0'
+    enabled: 0
+    criterion:
+      external: 1
+      development: 1
+  AssetsImagesPng:
+    path: 'git:///git@github.com:Wandalen/AssetsImagesPng.git'
+    criterion:
+      asset: 1
+      proto: 0
+    enabled: 0
