--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name" : "wimage",
-  "version" : "0.3.107",
+  "version" : "0.3.108",
   "description" : "Standardized abstract interface to open / read / parse image with collection of plugins.",
   "author" : "Kostiantyn Wandalen <wanalen@01.school>",
   "license" : "MIT",
@@ -25,12 +25,12 @@
     "bmp-js" : "=0.1.0",
     "utif" : "=3.1.0",
     "omggif" : "1.0.10",
-    "wTools" : "stable",
-    "wCopyable" : "stable",
-    "wFiles" : "stable",
-    "wConsequence" : "stable",
-    "wgdf" : "stable"
+    "wTools" : "delta",
+    "wCopyable" : "delta",
+    "wFiles" : "delta",
+    "wConsequence" : "delta",
+    "wgdf" : "delta"
   },
-  "devDependencies" : { "eslint" : "7.1.0", "wTesting" : "stable" },
+  "devDependencies" : { "eslint" : "7.1.0", "wTesting" : "delta" },
   "keywords" : [ "wTools" ]
 }
